Fix mobile footer gap: flex body, remove margin-top on footerSection

--- a/CSS/Forside.css
+++ b/CSS/Forside.css
@@ -317,6 +317,9 @@ p{
 
   body {
     background: transparent;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
   }
 
   .Hamburger {
@@ -420,9 +423,12 @@ p{
     font-size: 2vw;
   }
 
+  footer {
+    margin-top: auto;
+  }
+
   .footerSection {
     background-color: #222222;
-    margin-top: 8%;
   }
 }
 
@@ -436,6 +442,9 @@ p{
 
   body {
     background: transparent;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
   }
 
   .Hamburger {
@@ -563,10 +572,13 @@ p{
     font-size: 3.5vw;
   }
 
+  footer {
+    margin-top: auto;
+  }
+
   .footerSection {
     display: flex;
     justify-content: center;
-    margin-top: 40%;
     background-color: #222222;
   }
 
